making website presentable

--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                         <img src="..//img/2.jpeg" alt="image-2" class="img-fluid rounded border">
                     </div>
                     <div class="col-md-4 mb-4">
-                        <img src="/Users/janit/Desktop/3.jpeg" alt="image-3" class="img-fluid rounded border">
+                        <img src="..//img/3.jpeg" alt="image-3" class="img-fluid rounded border">
                     </div>
                     <div class="col-lg-4 mb-4 py-5 border-dark">
-                        <img src="/Users/janit/Desktop/4.jpeg" alt="image-4" class="img-fluid rounded border">
+                        <img src="/Users/janit//4.jpeg" alt="image-4" class="img-fluid rounded border">
                     </div>
                     <div class="col-lg-4 mb-4 py-5">
                         <img src="/Users/janit/Desktop/5.jpeg" alt="image-5" class="img-fluid rounded border">
