making website presentable

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                         <img src="..//img/3.jpeg" alt="image-3" class="img-fluid rounded border">
                     </div>
                     <div class="col-lg-4 mb-4 py-5 border-dark">
-                        <img src="/Users/janit//4.jpeg" alt="image-4" class="img-fluid rounded border">
+                        <img src="..//img/4.jpeg" alt="image-4" class="img-fluid rounded border">
                     </div>
                     <div class="col-lg-4 mb-4 py-5">
-                        <img src="/Users/janit/Desktop/5.jpeg" alt="image-5" class="img-fluid rounded border">
+                        <img src="" alt="image-5" class="img-fluid rounded border">
                     </div>
                     <div class="col-lg-4 mb-4 py-5">
                         <img src="/Users/janit/Desktop/6.jpeg" alt="image-6" class="img-fluid rounded border">
