making website presentable

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <img src="..//img/5.jpeg" alt="image-5" class="img-fluid rounded border">
                     </div>
                     <div class="col-lg-4 mb-4 py-5">
-                        <img src="/Users/janit/Desktop/6.jpeg" alt="image-6" class="img-fluid rounded border">
+                        <img src="" alt="image-6" class="img-fluid rounded border">
                     </div>
                 </div>
             </div>
