to make website look better

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <h2 class="text-center">Education</h2>
-                           <p  class="text-decoration-none"><a href="https://jaipur.manipal.edu/">Mainpal university,Jaipur</a></p>
+                           <p  class="text-decoration-none text-danger"><a href="https://jaipur.manipal.edu/">Mainpal university,Jaipur</a></p>
                            <p>Year: 2023-2026|BCA</p>
-                           <p class="text-decoration-none"><a href="https://tpsbehror.co.in/">Takshila Public school,Behror</a></p>
+                           <p class="text-decoration-none text-danger"><a href="https://tpsbehror.co.in/">Takshila Public school,Behror</a></p>
                            <p>Year: 2023-2026|BCA</p>
                         </div>
                     </div>
@@ -126,9 +126,9 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <h2 class="text-center">certificate</h2>
-                           <p class="text-danger text-decoration-none"><a href="https://www.freecodecamp.org/certification/fcc5a0561e9-f322-41e2-a1ae-d62a3530a1ca/responsive-web-design">Responsive web Designing,Free code camp</a></p>
+                           <p class="text-decoration-none"><a href="https://www.freecodecamp.org/certification/fcc5a0561e9-f322-41e2-a1ae-d62a3530a1ca/responsive-web-design">Responsive web Designing,Free code camp</a></p>
                            <p>Year: 2023</p>
-                           <p class="text-danger text-decoration-none"><a href="https://www.coursera.org/learn/html-and-css-in-depth/home/week/3?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta">HTML & CSS in Depth,META</a></p>
+                           <p class="text-decoration-none"><a href="https://www.coursera.org/learn/html-and-css-in-depth/home/week/3?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta">HTML & CSS in Depth,META</a></p>
                            <p>Year: 2023</p>
                         </div>
                     </div>
