--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </script>
 </head>
 <body>
-    <header class="bg-danger text-light py-3">
+    <header class="bg-danger text-light py-3 fixed-top">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4">
                     <h1 class="logo">janit</h1>
                 </div>
                 <div class="col-md-8">
-                    <nav class="navbar fixed-top navbar-expand-md navbar-dark">
+                    <nav class="navbar  navbar-expand-md navbar-dark">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
