--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body>
-    <header class="bg-danger text-light py-1 fixed-top">
+    <header class="bg-danger text-light  fixed-top">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4">
