to make website look better

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body>
-    <header class="bg-danger text-light  fixed-top">
+    <header class="bg-danger text-light fixed-top">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4">
@@ -112,9 +112,9 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <h2 class="text-center">Education</h2>
-                           <p  class="text-decoration-none text-danger"><a href="https://jaipur.manipal.edu/">Mainpal university,Jaipur</a></p>
+                           <p  class="text-decoration-none"><a href="https://jaipur.manipal.edu/">Mainpal university,Jaipur</a></p>
                            <p>Year: 2023-2026|BCA</p>
-                           <p class="text-decoration-none text-danger"><a href="https://tpsbehror.co.in/">Takshila Public school,Behror</a></p>
+                           <p class="text-decoration-none"><a href="https://tpsbehror.co.in/">Takshila Public school,Behror</a></p>
                            <p>Year: 2023-2026|BCA</p>
                         </div>
                     </div>
