to make website look better

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
     </header>
 
-    <section class="banner text-center py-5">
+    <section class="banner text-center py-5" style="margin-top: 30px;">
         <h1>
             <span>JANIT</span>
             <span class="red bounce-word text-danger">YADAV</span>
