--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav ml-auto">
+                        <div class="collapse navbar-collapse text-right" id="navbarNav">
+                            <ul class="navbar-nav ml-auto text-right">
                                 <li class="nav-item">
                                     <a class="nav-link" href="#aboutme">About</a>
                                 </li>
@@ -57,7 +57,6 @@
                     </nav>
                 </div>
     </header>
-
     <section class="banner text-center py-5" style="margin-top: 30px;">
         <h1>
             <span>JANIT</span>
@@ -92,7 +91,7 @@
       <div class="row">
           <div class="col-lg-8 mx-auto">
               <h2 class="text-center">About Us</h2>
-              <p class="text-justify">
+              <p class="text-justify" style="font-size: 18px; font-weight: 600;">
                 Welcome to my profile! I am a passionate individual i loves exploring new places
                   and am enthusiastic about the world of web development.I am Currently pursuing a Bachelor's degree in
                   Computer Applications (BCA) at Manipal University, Jaipur, I am diving deep into the realm of
