--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-md-4">
                     <h1 class="logo">janit</h1>
                 </div>
-                <div class="col-md-8">
+                <div class="col-sm-8">
                     <nav class="navbar  navbar-expand-md navbar-dark">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
